--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
-    "express-ejs-layouts": "^2.5.1"
+    "express-ejs-layouts": "^2.5.1",
+    "mongoose": "^6.0.8"
   },
   "devDependencies": {
     "nodemon": "^2.0.13"
